[gd_scene load_steps=4 format=3 uid="uid://c3qx8g3ihbre0"]

[ext_resource type="Script" uid="uid://llmy7c4wsdnm" path="res://ScenePreloads/Equipment_old/equipment.gd" id="1_gv2wp"]
[ext_resource type="PackedScene" uid="uid://euoj82orengh" path="res://Graphic Elements/Buttons/super_button_alt.tscn" id="2_3vesg"]
[ext_resource type="PackedScene" uid="uid://cb0xb20pk0mpa" path="res://Images/SpriteSheets/sprite.tscn" id="2_tomgk"]

[node name="Equipment" type="VBoxContainer"]
script = ExtResource("1_gv2wp")
myScale = Vector2(5, 5)

[node name="SuperButton" parent="." instance=ExtResource("2_3vesg")]
layout_mode = 2
sticky = true
contentMargin = 6.0

[node name="Sprite" parent="SuperButton/HBoxContainer" index="0" instance=ExtResource("2_tomgk")]
layout_mode = 2

[connection signal="wasDeselected" from="SuperButton" to="." method="_on_super_button_was_deselected"]
[connection signal="wasSelected" from="SuperButton" to="." method="_on_super_button_was_selected"]

[editable path="SuperButton"]
[editable path="SuperButton/HBoxContainer/Sprite"]
